--- a/style.css
+++ b/style.css
@@ -1,14 +1,20 @@
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+html, body {
     height: 100%;
     
 }
 
-html {
+#button-container{
+    text-align: center;
+}
+
+#body-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     height: 100%;
 }
+
 
 #main-container {
     width: 400px;
